--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-ES">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prospera Free - New Amazing HTML5 Template</title>
+    <title>CIM</title>
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/responsee.css">
@@ -52,8 +52,8 @@
           <div class="top-nav s-12 l-10">
             <p class="nav-text"></p>
             <ul class="right chevron">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="products.html">Products</a></li>
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="products.html">Temas de interes</a></li>
               <li><a>Services</a>
                 <ul>
                   <li><a>Service 1</a>
@@ -65,8 +65,8 @@
                   <li><a>Service 2</a></li>
                 </ul>
               </li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="about.html">Noticias</a></li>
+              <li><a href="gallery.html">Organizacion</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
